<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecyclerViewDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="normal_list">Normal List</string>
    <string name="normal_grid">Normal Grid</string>
    <string name="normal_staggered">Normal Staggered</string>
    <string name="multiple_list">Multiple List</string>
    <string name="multiple_grid">Multiple Grid</string>
    <string name="test">深夜……\n老公：老婆，饿不？我给你煮碗面啊？\n老婆：不用。\n老公：那我去给你洗点水果吧？\n老婆：不用。\n老公：那我去洗洗衣服拖拖地吧？\n老婆：不用。\n老公：老婆，那你说我干点啥呢？反正我这也没啥事！\n老婆：你就消停的在那儿给我跪到天亮，少特么得瑟，我看你还敢不敢在微信上说你是单身！</string>
    <string name="delete">删除</string>

</resources>
