<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_normal_list"
        android:title="@string/normal_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_normal_grid"
        android:title="@string/normal_grid"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_normal_staggered"
        android:title="@string/normal_staggered"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_multiple_list"
        android:title="@string/multiple_list"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_multiple_grid"
        android:title="@string/multiple_grid"
        app:showAsAction="never"/>
</menu>
